# rust-s3-server

./: .gitignore  Cargo.toml  README.md  REDESIGN.md  config.yaml  delete.sh  log4rs.yml  mint-test-config.yaml  plan.md  run.sh  test.sh  test_report.md
.cargo/: config.toml
src/: cachedfile.rs  chunk_to_raw.rs  fsapi.rs  ioutil.rs  lib.rs  main.rs  request_guards.rs  s3error.rs  s3resp.rs  sequencing.rs  states.rs  test.rs
src/server/: auth.rs  config.rs  event_hub.rs  iam.rs  identity.rs  integration_tests.rs  logging.rs  mod.rs  pipeline.rs  policy.rs  range.rs  registry.rs  tests.rs  ui.html  ui.rs  xml.rs
src/server/assets/: backup.js  core.js  iam.js  main.js  objects.js  tasks.html  tasks.js
src/server/handlers/: mod.rs
src/server/handlers/abort_multipart/: lib.rs
src/server/handlers/browser_post/: lib.rs
src/server/handlers/complete_multipart/: lib.rs
src/server/handlers/copy_object/: lib.rs
src/server/handlers/copy_part/: lib.rs
src/server/handlers/create_bucket/: lib.rs
src/server/handlers/create_multipart/: lib.rs
src/server/handlers/delete_bucket/: lib.rs
src/server/handlers/delete_object/: lib.rs
src/server/handlers/delete_objects/: lib.rs
src/server/handlers/get_bucket_location/: lib.rs
src/server/handlers/get_object/: lib.rs
src/server/handlers/head_bucket/: lib.rs
src/server/handlers/list_objects/: lib.rs
src/server/handlers/list_parts/: lib.rs
src/server/handlers/list_uploads/: lib.rs
src/server/handlers/list_versions/: lib.rs
src/server/handlers/put_object/: lib.rs
src/server/handlers/put_part/: lib.rs
src/server/handlers/rebuild_index/: lib.rs
src/server/jobs/: mod.rs
src/server/jobs/delete_staging/: lib.rs
src/server/jobs/delete_trash/: lib.rs
src/server/jobs/migrate_layout/: lib.rs
src/server/jobs/rebuild_index/: lib.rs
src/server/jobs/reclaim/: lib.rs
src/server/jobs/resolve_intents/: lib.rs
src/storage/: cache.rs  config.rs  encoding.rs  errors.rs  index.rs  layout.rs  locks.rs  metadata.rs  mod.rs  rawdb.rs  resolver.rs  store.rs  sweeper.rs  time.rs
src/storage_v2/: auth.rs  aws_chunked.rs  cache.rs  config.rs  encoding.rs  errors.rs  http.rs  index.rs  layout.rs  logging.rs  metadata.rs  mod.rs  staging.rs  store.rs  sweeper.rs  time.rs  xml.rs
