[package]
name = "rust-s3-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
regex = "1.9"
tokio = { version = "1", features = ["full"]}
hyper = { version = "0.14", features = ["full"] }
http-body = "0.4"
http-body-util = "0.1.0-rc.3"
rocket = "=0.5.0-rc.3"
ubyte = "0.10"
chrono = "0.4"
urlencoding = "2.1"
httpdate = "1"
pin-project = "1.1"
md-5 = "0.10"
clap = { version = "4.3", features = ["derive"] }
futures = "0.3"
log = "0.4"
log4rs = { version="1.2.0", features = ["gzip", "background_rotation"] }
asyncio-utils = "0.4"

[[bin]]
name="rusts3"
path="src/main.rs"

[[bin]]
name="test"
path="src/test.rs"
