[package]
name = "rust-s3-server"
version = "0.2.0"
edition = "2021"

[dependencies]
# Async runtime
tokio       = { version = "1",    features = ["full"] }
tokio-util  = { version = "0.7", features = ["io"] }
futures     = "0.3"
bytes       = "1"

# HTTP framework
axum = "0.7"

# Storage / serialisation
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1.0"
serde_yaml  = "0.9"
sqlx        = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Hashing / auth
md-5    = "0.10"
sha1    = "0.10"
sha2    = "0.10"
hmac    = "0.12"
base64  = "0.21"

# Utilities
rand        = "0.8"
chrono      = "0.4"
urlencoding = "2.1"
httpdate    = "1"
regex       = "1.9"
clap        = { version = "4.3", features = ["derive"] }

# Logging
log     = "0.4"
log4rs  = { version = "1.2.0", features = ["gzip", "background_rotation"] }

[dev-dependencies]
tempfile = "3"
tower    = { version = "0.4", features = ["util"] }

[[bin]]
name = "rusts3"
path = "src/bin/rusts3.rs"
